@@ -1,4 +1,6 @@
-from allauth.utils import import_attribute
+from allauth.utils import (import_attribute,
+                           get_user_model,
+                           valid_email_or_none)
 
 import app_settings
 
@@ -17,6 +19,26 @@ class DefaultSocialAccountAdapter(object):
         handlers may be active and are executed in undetermined order.
         """
         pass
+
+
+    def populate_new_user(self,
+                          username=None,
+                          first_name=None, 
+                          last_name=None,
+                          email=None,
+                          name=None):
+        """
+        Spawns a new User instance, safely and leniently populating
+        several common fields.
+        """
+        user = get_user_model()()
+        user.username = username or ''
+        user.email = valid_email_or_none(email) or ''
+        name_parts= (name or '').partition(' ')
+        user.first_name = first_name or name_parts[0]
+        user.last_name = last_name or name_parts[2]
+        return user
+
 
 
 def get_adapter():
