@@ -6,11 +6,9 @@ from allauth.socialaccount.providers.oauth.views import (OAuthAdapter,
                                                          OAuthLoginView,
                                                          OAuthCallbackView)
 from allauth.socialaccount.models import SocialAccount, SocialLogin
-from allauth.utils import valid_email_or_none, get_user_model
+from allauth.socialaccount.adapter import get_adapter
 
 from provider import LinkedInProvider
-
-User = get_user_model()
 
 class LinkedInAPI(OAuth):
     url = 'https://api.linkedin.com/v1/people/~'
@@ -55,10 +53,10 @@ class LinkedInOAuthAdapter(OAuthAdapter):
                              self.request_token_url)
         extra_data = client.get_user_info()
         uid = extra_data['id']
-        email = valid_email_or_none(extra_data.get('email-address', ''))
-        user = User(first_name=extra_data.get('first-name', ''),
-                    last_name=extra_data.get('last-name', ''),
-                    email=email)
+        user = get_adapter() \
+            .populate_new_user(email=extra_data.get('email-address'),
+                               first_name=extra_data.get('first-name'),
+                               last_name=extra_data.get('last-name'))
         account = SocialAccount(user=user,
                                 provider=self.provider_id,
                                 extra_data=extra_data,
@@ -67,4 +65,3 @@ class LinkedInOAuthAdapter(OAuthAdapter):
 
 oauth_login = OAuthLoginView.adapter_view(LinkedInOAuthAdapter)
 oauth_callback = OAuthCallbackView.adapter_view(LinkedInOAuthAdapter)
-
