@@ -14,13 +14,12 @@ from allauth.socialaccount.app_settings import QUERY_EMAIL
 from allauth.socialaccount.models import SocialAccount, SocialLogin
 from allauth.socialaccount.helpers import render_authentication_error
 from allauth.socialaccount.helpers import complete_social_login
-from allauth.utils import valid_email_or_none, get_user_model
+from allauth.socialaccount.adapter import get_adapter
+from allauth.utils import valid_email_or_none
 
 from utils import DBOpenIDStore
 from forms import LoginForm
 from provider import OpenIDProvider
-
-User = get_user_model()
 
 class AXAttribute:
     CONTACT_EMAIL = 'http://axschema.org/contact/email'
@@ -94,7 +93,8 @@ def callback(request):
         dict(request.REQUEST.items()),
         request.build_absolute_uri(request.path))
     if response.status == consumer.SUCCESS:
-        user = User(email=_get_email_from_response(response))
+        user = get_adapter() \
+            .populate_new_user(email=_get_email_from_response(response))
         account = SocialAccount(uid=response.identity_url,
                                 provider=OpenIDProvider.id,
                                 user=user,
