@@ -4,11 +4,9 @@ from allauth.socialaccount.providers.oauth2.views import (OAuth2Adapter,
                                                           OAuth2LoginView,
                                                           OAuth2CallbackView)
 from allauth.socialaccount.models import SocialAccount, SocialLogin
-from allauth.utils import get_user_model
+from allauth.socialaccount.adapter import get_adapter
 
 from provider import SoundCloudProvider
-
-User = get_user_model()
 
 class SoundCloudOAuth2Adapter(OAuth2Adapter):
     provider_id = SoundCloudProvider.id
@@ -21,16 +19,10 @@ class SoundCloudOAuth2Adapter(OAuth2Adapter):
                             params={ 'oauth_token': token.token })
         extra_data = resp.json()
         uid = str(extra_data['id'])
-        name_parts = extra_data.get('full_name', '').split(' ', 1)
-        if len(name_parts) == 2:
-            first_name, last_name = name_parts
-        else:
-            first_name, last_name = name_parts[0], ''
-        user_kwargs = {'first_name': first_name, 
-                       'last_name': last_name}
-        user = User(username=extra_data.get('username', ''),
-                    email=extra_data.get('email', ''),
-                    **user_kwargs)
+        user = get_adapter() \
+            .populate_new_user(name=extra_data.get('full_name'),
+                               username=extra_data.get('username'),
+                               email=extra_data.get('email'))
         account = SocialAccount(user=user,
                                 uid=uid,
                                 extra_data=extra_data,
