@@ -5,11 +5,9 @@ from allauth.socialaccount.providers.oauth2.views import (OAuth2Adapter,
                                                           OAuth2CallbackView)
 from allauth.socialaccount.models import SocialAccount, SocialLogin
 from allauth.socialaccount.providers import registry
-from allauth.utils import get_user_model
+from allauth.socialaccount.adapter import get_adapter
 
 from provider import StackExchangeProvider
-
-User = get_user_model()
 
 class StackExchangeOAuth2Adapter(OAuth2Adapter):
     provider_id = StackExchangeProvider.id
@@ -29,7 +27,8 @@ class StackExchangeOAuth2Adapter(OAuth2Adapter):
         # e.g. StackOverflow and ServerFault. Therefore, we pick
         # `account_id`.
         uid = str(extra_data['account_id'])
-        user = User(username=extra_data.get('display_name', ''))
+        user = get_adapter() \
+            .populate_new_user(username=extra_data.get('display_name'))
         account = SocialAccount(user=user,
                                 uid=uid,
                                 extra_data=extra_data,
