@@ -5,11 +5,9 @@ from allauth.socialaccount.providers.oauth.views import (OAuthAdapter,
                                                          OAuthLoginView,
                                                          OAuthCallbackView)
 from allauth.socialaccount.models import SocialLogin, SocialAccount
-from allauth.utils import get_user_model
+from allauth.socialaccount.adapter import get_adapter
 
 from provider import TwitterProvider
-
-User = get_user_model()
 
 class TwitterAPI(OAuth):
     """
@@ -35,7 +33,9 @@ class TwitterOAuthAdapter(OAuthAdapter):
                             self.request_token_url)
         extra_data = client.get_user_info()
         uid = extra_data['id']
-        user = User(username=extra_data['screen_name'])
+        user = get_adapter() \
+            .populate_new_user(username=extra_data.get('screen_name'),
+                               name=extra_data.get('name'))
         account = SocialAccount(user=user,
                                 uid=uid,
                                 provider=TwitterProvider.id,
