@@ -1,3 +1,9 @@
+2013-01-24  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* socialaccount: Populating of User model fields is now
+	centralized in the adapter, splitting up `name` into `first_name`
+	and `last_name` if these were not individually available.
+
 2013-01-11  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: Added SocialAccountAdapter hook to allow for
